🔥 fresh from the oven

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,29 @@
-version: '3.8'
 services:
   php:
     build:
       context: ./php
-    container_name: ${COMPOSE_PROJECT_NAME}_php
-    # Teruskan variabel PROJECT_NAME ke dalam kontainer
-    environment:
-      - PROJECT_NAME=${PROJECT_NAME}
-      - XDEBUG=${XDEBUG:-false}
+    container_name: uts-pemweb_php
+    healthcheck:
+      test: ["CMD-SHELL", "php artisan --version"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
     volumes:
       - ./src:/var/www/html
+    environment:
+      - PROJECT_NAME=uts-pemweb
     depends_on:
-      db:
-        condition: service_healthy
+      - db
+
   nginx:
     build:
       context: ./nginx
-    container_name: ${COMPOSE_PROJECT_NAME}_nginx
+    container_name: uts-pemweb_nginx
+    healthcheck:
+      test: ["CMD-SHELL", "curl -k -fsSL https://uts-pemweb.test || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 30
     ports:
       - "443:443"
       - "80:80"
@@ -26,10 +33,10 @@ services:
       - ./nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       - php
+
   db:
     image: mariadb:10.11
-    container_name: ${COMPOSE_PROJECT_NAME}_db
-    restart: unless-stopped
+    container_name: uts-pemweb_db
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 10s
@@ -38,8 +45,7 @@ services:
     ports:
       - "13306:3306"
     environment:
-      # Database ini akan dibuat saat kontainer pertama kali dijalankan
-      MYSQL_DATABASE: ${PROJECT_NAME}
+      MYSQL_DATABASE: uts-pemweb
       MYSQL_ROOT_PASSWORD: p455w0rd
     volumes:
       - ./db/conf.d:/etc/mysql/conf.d
