--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
-# Docker data
-db/data/
-# Dependencies
-src/vendor/
-src/node_modules/
-# IDE & OS files
-.idea/
-.vscode/
-.DS_Store
-# Environment files
-.env
-src/.env
+db/data/*
+*/db/data/*
+../db/data/*
