--- a/.env
+++ b/.env
@@ -1,7 +1,3 @@
+# Variabel ini digunakan oleh docker-compose.yml
 COMPOSE_PROJECT_NAME=uts-pemweb
-REPOSITORY_NAME=uts-pemweb
-IMAGE_TAG=latest
-COMPOSE_BAKE=true
-APP_NAME="uts-pemweb"
-APP_URL="https://uts-pemweb.test"
-ASSET_URL="https://uts-pemweb.test"
+PROJECT_NAME=uts-pemweb
