--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-db/data/*
-*/db/data/*
-../db/data/*
+# Docker data
+db/data/
+# Dependencies
+src/vendor/
+src/node_modules/
+# IDE & OS files
+.idea/
+.vscode/
+.DS_Store
+# Environment files
+.env
+src/.env
